<resources>
    <string name="app_name">Ô PTIT MONDE</string>
    <string name="catch_phrase">Une petite faim ?</string>
    <string name="button_starter">Entrées</string>
    <string name="button_main">Plats</string>
    <string name="button_dessert">Desserts</string>
    <string name="random_value">Random</string>
    <string name="logo_description">logo app</string>
    <string name="bg_home_description">background home page</string>
    <string name="our_card">Notre carte</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="less_button">Value less</string>
    <string name="more_button">value more</string>
    <string name="one">1</string>
    <string name="basket">Panier</string>
    <string name="total_cart">Total : 0€</string>
    <string name="trash_item">Trash item</string>
    <string name="item_image_order">Image dish order</string>
    <string name="item_describ_order">description dish order</string>
    <string name="image_list_dish">image dish list</string>
    <string name="arrow_list_dish">arrow list dish</string>
    <string name="title_dish">Kebab</string>
    <string name="description_dish">Salade, tomate, oignon chef</string>
    <string name="image_dish_detail">Image for dish detail</string>
    <string name="basket_item">basket logo</string>
    <string name="price_dish">0€</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_up">Créer un compte</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Email invalide</string>
    <string name="invalid_firstName">Prénom invalide</string>
    <string name="invalid_lastName">Nom invalide</string>
    <string name="invalid_address">Adresse invalide</string>
    <string name="invalid_password">Mot de passe doit contenir 12 caractères dont au moins 1 minuscule, 1 majuscule, 1 chiffre et 1 caractère spécial</string>
    <string name="login_failed">Authentification échoué</string>
    <string name="prompt_firstname">Prénom</string>
    <string name="prompt_lastname">Nom</string>
    <string name="prompt_address">Adresse</string>
    <string name="account_connect">Déjà un compte ?</string>
    <string name="account_register">Pas encore de compte ?</string>
    <string name="success_order">Commande envoyé avec succès</string>
    <string name="order_success_description">Nous allons nous occuper de votre commande le plus rapidement possible</string>
    <string name="success_order_title">Ô Ptit Monde vous remercie</string>
    <string name="success_transaction_number">Numéro de transaction : 43526981</string>
    <string name="success_total_order">MONTANT TOTAL</string>
    <string name="success_order_paid_by">PAYÉ PAR</string>
    <string name="paypal">PAYPAL</string>
    <string name="random_price">45.50€</string>
    <string name="success_order_image">Success order image</string>
    <string name="back_homepage">Retour à l\'accueil</string>
    <string name="add_cart">Ajouter au panier</string>
    <string name="payment_denied">PAIEMENT REJETÉ</string>
    <string name="back_order">Revenir au panier</string>
    <string name="erreur_code">Une erreur est survenue, veuillez réessayer plus tard</string>
    <string name="badge_status">Badge status de connexion</string>
    <string name="logout">Se déconnecter</string>
    <string name="account">Mon compte</string>
    <string name="register_error">Email déjà utilisé</string>
    <string name="error_page">Image error page</string>
</resources>